composition/dev/ingress/kube-prometheus-stack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kube-prometheus-stack-ingress-prometheus
spec:
  # tls:
  # - hosts:
  #   - homelab.com
  #   secretName: example-app-tls
  rules:
  - host: prometheus.homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus-operated
            port: 
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kube-prometheus-stack-ingress-grafana
spec:
  # tls:
  # - hosts:
  #   - homelab.com
  #   secretName: example-app-tls
  rules:
  - host: grafana.homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prom-grafana
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kube-prometheus-stack-ingress-alertmanager
spec:
  # tls:
  # - hosts:
  #   - homelab.com
  #   secretName: example-app-tls
  rules:
  - host: alertmanager.homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: alertmanager-operated
            port: 
              number: 9093
